# Cynthesis

./: .gitignore  CMakeLists.txt  README.md  main.cc  main.py  setup.py
include/: camera.h  core.h
include/entities/: entity.h
include/utils/: entityList.h  node.h  renderQueue.h
src/: camera.cc  core.cc
src/core/: core.py  organism.py  particle.py
src/entities/: entity.cc
src/math/: vectors.py
src/shared/: constants.py
src/utils/: entityList.cc  node.cc  renderQueue.cc
